fix some spacing issues with buttons in navbar

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -16,6 +16,10 @@
   justify-content: flex-end;
 }
 
+.navbar-box .btn {
+  margin: 0 5px;
+}
+
 .form-spacing h4 {
   margin: 0.7em;
 }
@@ -35,4 +39,9 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
+}
+
+.card-image {
+  max-width: 100%;
+  object-fit: cover;
 }
